fix share buttons wrapping

--- a/_src/styl/modules.styl
+++ b/_src/styl/modules.styl
@@ -345,6 +345,9 @@ ul.posts
             .share-buttons
                 display block
 
+                .b-share_theme_counter .b-share
+                    white-space normal
+
                 .b-share_theme_counter .b-share-btn__wrap
                     float none
                     display inline-block
